# DBusPermissionManager

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
Client/: CMakeLists.txt  main.cpp
PermissionsService/: CMakeLists.txt  PermissionsDatabase.cpp  PermissionsDatabase.hpp  PermissionsService.cpp  PermissionsService.hpp  main.cpp
TimeService/: CMakeLists.txt  TimeService.cpp  TimeService.hpp  main.cpp
